--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "version": "0.0.0",
   "scripts": {
     "build": "vite build",
+    "lint": "yarn prettier --write .",
     "start": "yarn build && node dist/app.mjs"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^20.2.5",
+    "prettier": "^2.8.8",
     "typescript": "^5.0.2",
     "vite": "^4.3.9",
     "vite-plugin-node": "^3.0.2"
