--- a/package.json
+++ b/package.json
@@ -4,18 +4,44 @@
   "version": "0.0.0",
   "scripts": {
     "build": "vite build",
-    "lint": "yarn prettier --write .",
+    "lint": "eslint src && yarn prettier --write .",
     "start": "yarn build && node dist/app.mjs"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^20.2.5",
+    "@typescript-eslint/eslint-plugin": "^5.59.8",
+    "@typescript-eslint/parser": "^5.59.8",
+    "eslint": "^8.42.0",
     "prettier": "^2.8.8",
-    "typescript": "^5.0.2",
+    "typescript": "5.0.4",
     "vite": "^4.3.9",
     "vite-plugin-node": "^3.0.2"
   },
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "eslintConfig": {
+    "env": {
+      "es2021": true,
+      "node": true
+    },
+    "extends": [
+      "eslint:recommended",
+      "plugin:@typescript-eslint/recommended"
+    ],
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+      "ecmaVersion": "latest"
+    },
+    "plugins": [
+      "@typescript-eslint"
+    ],
+    "rules": {}
+  },
+  "prettier": {},
+  "volta": {
+    "node": "18.16.0",
+    "yarn": "1.22.19"
   }
 }
