--- a/package.json
+++ b/package.json
@@ -3,23 +3,23 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "build": "vite build",
+    "build": "esbuild src/app.ts --bundle --outfile=dist/app.js --platform=node",
     "lint": "eslint src && yarn prettier --write .",
-    "start": "yarn build && node dist/app.mjs"
+    "start": "yarn build && node dist/app.mjs",
+    "package": "yarn build && docker build . -t firehose-mock"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^20.2.5",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
+    "esbuild": "^0.17.19",
     "eslint": "^8.42.0",
     "prettier": "^2.8.8",
-    "typescript": "5.0.4",
-    "vite": "^4.3.9",
-    "vite-plugin-node": "^3.0.2"
-  },
-  "dependencies": {
-    "express": "^4.18.2"
+    "typescript": "5.0.4"
   },
   "eslintConfig": {
     "env": {
