--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "esbuild src/app.ts --bundle --outfile=dist/app.js --platform=node",
     "lint": "eslint src && yarn prettier --write .",
-    "start": "yarn build && node dist/app.js",
+    "dev": "conc \"yarn build --watch\" \"nodemon dist/app.js\"",
     "package": "yarn build && docker build . -t firehose-mock"
   },
   "dependencies": {
@@ -16,8 +16,10 @@
     "@types/node": "^20.2.5",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
+    "concurrently": "^8.1.0",
     "esbuild": "^0.17.19",
     "eslint": "^8.42.0",
+    "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
     "typescript": "5.0.4"
   },
