--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "esbuild src/app.ts --bundle --outfile=dist/app.js --platform=node",
     "lint": "eslint src && yarn prettier --write .",
     "dev": "conc \"yarn build --watch\" \"nodemon dist/app.js\"",
-    "package": "yarn build && docker build . -t firehose-mock"
+    "package": "yarn build && docker build . -t andrewinci/firehose-mock"
   },
   "dependencies": {
     "express": "^4.18.2",
